--- a/style.css
+++ b/style.css
@@ -50,10 +50,10 @@
   outline: none;
   border-radius: 5px;
 }
-.input-box img{
-  width:25px;
-position:absolute;
-bottom:15px;
-right:15px;
-cursor:pointer;g
+.input-box img {
+  width: 25px;
+  position: absolute;
+  bottom: 15px;
+  right: 15px;
+  cursor: pointer;
 }
