--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 .container {
   width: 100%;
   min-height: 100vh;
-  background: linear-gradient(135deg, #cf9aff, #95c0ff);
+  background: linear-gradient(135deg, blue, #95c0ff);
   padding-top: 4%;
   padding-left: 10%;
 }
@@ -16,6 +16,7 @@
   align-items: center;
   font-size: 35px;
   font-weight: 600;
+  color: white;
 }
 .container h1 img {
   width: 60px;
@@ -28,7 +29,7 @@
 .container button {
   display: flex;
   align-items: center;
-  background: linear-gradient(#9418fd, #571094);
+  background: linear-gradient(rgb(169, 169, 235), #571094);
   color: #fff;
   font-size: 16px;
   outline: 0;
